--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^5.4.1
   firebase_storage: ^10.3.8
   provider: ^6.0.4
+  firebase_core_platform_interface: 4.5.1
 
 dev_dependencies:
   flutter_test:
